# castmasta

./: .gitignore  COPYING  Dockerfile.build  directory_structure.md  opencode.json  pyproject.toml  usage.md
.github/workflows/: build-deb.yml
airplay_agent/: __init__.py  agent.py  cli.py  config.py  mcp_server.py  tools.py
airplay_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
castmasta/: __init__.py  agent.py  airplay_backend.py  backend.py  cast_backend.py  cli.py  config.py  credentials.py  file_server.py  mcp_server.py  tools.py
debian/: castmasta.env  castmasta.postinst.debhelper  castmasta.postrm.debhelper  castmasta.prerm.debhelper  castmasta.service  castmasta.substvars  changelog  conffiles  control  debhelper-build-stamp  files  postinst  prerm  rules
debian/.debhelper/castmasta/: dbgsym-build-ids
debian/.debhelper/castmasta/dbgsym-root/DEBIAN/: control  md5sums
debian/.debhelper/castmasta/dbgsym-root/usr/lib/debug/.dwz/aarch64-linux-gnu/: castmasta.debug
debian/.debhelper/castmasta/dbgsym-root/usr/share/doc/: castmasta-dbgsym
debian/castmasta/DEBIAN/: control  md5sums  postinst  postrm  prerm  shlibs
docs/: api.md  architecture.md  build.md  contributing.md  pairing.md
docs/plans/: 2026-02-18-google-cast-implementation.md  2026-02-18-google-cast-support-design.md  2026-02-20-announce-design.md  2026-02-20-announce.md  2026-02-22-deb-build-design.md  2026-02-22-deb-build.md
scripts/: build-base-image.sh  build-deb.sh  git.sh  register-bigbrain.sh
systemd/: airplay-agent.service  airplay-agent@.service  castmasta.service  castmasta@.service
tests/: test_agent.py  test_airplay_backend.py  test_backend.py  test_cast_backend.py  test_credentials.py  test_file_server.py
