[project]
name = "airplay-agent"
version = "0.1.0"
description = "LLM agent for controlling AirPlay devices"
requires-python = ">=3.10"
dependencies = [
    "pyatv>=0.14.0",
    "aiohttp>=3.9.0",
    "pydantic>=2.0.0",
    "click>=8.0.0",
    "fastmcp>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
airplay-agent = "airplay_agent.cli:main"
airplay-mcp = "airplay_agent.mcp_server:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
