[project]
name = "castmasta"
version = "0.2.0"
description = "LLM agent for controlling AirPlay and Google Cast devices"
requires-python = ">=3.10"
dependencies = [
    "pyatv>=0.14.0",
    "pychromecast>=14.0.0",
    "aiohttp>=3.9.0",
    "click>=8.0.0",
    "fastmcp>=2.0.0",
    "piper-tts>=1.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
castmasta = "castmasta.cli:main"
castmasta-mcp = "castmasta.mcp_server:main"

[tool.setuptools.packages.find]
include = ["castmasta*"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
